@@ -703,8 +703,22 @@
      </item>
   </version>
   
+  <!-- ======================================================================= -->
+  <!-- bugid 6620930 - ARCO view_accounting filters out parallel job usage incorrectly
+         fixed in version 7 6.2-->
+      
+   <version id="6" name="6.1u3">  
+       <item>
+         <description>Update version table</description>
+         <sql>
+            INSERT INTO sge_version (v_id, v_version, v_time)
+            VALUES(6, '6.1u3', current_timestamp)
+         </sql>
+      </item>
+   </version>
+   
   <!-- ======================================================================= -->   
-  <version id="6" name="6.2">     
+  <version id="7" name="6.2">     
      <item>
         <description>Create table sge_ar</description>
         <sql>
@@ -845,7 +859,7 @@
            ju_end_time - ju_start_time AS job_duration
            FROM sge_job, sge_job_usage
            WHERE j_id = ju_parent
-           AND j_submission_time > timestamp '1970-01-02 00:00:00' AND ju_start_time >= j_submission_time
+           AND ju_start_time >= j_submission_time
         </sql>
      </item>
      <item>
@@ -927,7 +941,7 @@
         <description>Update version table</description>
         <sql>
            INSERT INTO sge_version (v_id, v_version, v_time)
-           VALUES(6, '6.2', current_timestamp)
+           VALUES(7, '6.2', current_timestamp)
         </sql>
      </item>
   </version>
