@@ -885,8 +885,22 @@
    </version>
    
    <!-- ======================================================================= -->
+   <!-- bugid 6620930 - ARCO view_accounting filters out parallel job usage incorrectly
+         fixed in version 7 6.2-->
+      
+   <version id="6" name="6.1u3">  
+       <item>
+         <description>Update version table</description>
+         <sql>
+            INSERT INTO sge_version (v_id, v_version, v_time)
+            VALUES(6, '6.1u3', current_timestamp)
+         </sql>
+      </item>
+   </version>
+   
+   <!-- ======================================================================= -->
   
-   <version id="6" name="6.2">     
+   <version id="7" name="6.2">     
       <item>
          <description>Create table sge_ar</description>
          <sql>
@@ -1035,7 +1049,6 @@
             ju_maxvmem AS maxvmem
             FROM sge_job, sge_job_usage
             WHERE j_id = ju_parent
-            AND j_submission_time > '1970-01-02' 
             AND ju_start_time >= j_submission_time
          </sql>
       </item>    
@@ -1112,13 +1125,6 @@
             GROUP BY ART.ar_number, ar_duration ORDER BY ART.ar_number
          </sql>
       </item> 
-      <item>
-         <description>Update version table</description>
-         <sql>
-            INSERT INTO sge_version (v_id, v_version, v_time)
-            VALUES(6, '6.2', current_timestamp)
-         </sql>
-      </item>
       
       <!-- ============== privileges ========================================== -->
     
@@ -1169,9 +1175,15 @@
       <item>
          <description>grant privileges on view_ar_time_usage to {READ_USER}</description>
          <sql>GRANT SELECT ON view_ar_time_usage TO {READ_USER}</sql>
-      </item>     
-   </version>
-   
-   
+      </item>    
+      
+      <item>
+         <description>Update version table</description>
+         <sql>
+            INSERT INTO sge_version (v_id, v_version, v_time)
+            VALUES(7, '6.2', current_timestamp)
+         </sql>
+      </item>
+   </version>  
    
 </DBModel>
